fixed spacing and added backdrop to resume page

--- a/src/components/pages/about.module.css
+++ b/src/components/pages/about.module.css
@@ -10,6 +10,7 @@
     transform: translate(0, 50px);
     display: flex; 
     margin: 2%;
+    padding-bottom: 20%;
 }
 
 .frame {
